# gbf_bot

./: .env.example  .gitignore  Dockerfile.app  LICENSE  README.md  __init__.py  app.json  command_prefix.py  docker-compose.yml  my_token.py  prefix.py  pyproject.toml  requirements.test.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
config/: .env.db.production.example  .env.example  .env.test.example  .env.testing.example
db/: init.sql  setup.sql
doc/db_tables/: table_definition.md
doc/features/: サーバー毎のカスタム機能.md  スケジュール機能.md  スプレッドシート連携機能.md  マルチバトル募集機能.md  機能テンプレート.md
doc/scopes/: データの参照範囲について.md
docker/: Dockerfile
gbf/: __init__.py
gbf/command/: __init__.py  hello.py
gbf/commands/: __init__.py  hello.py  hey.py
gbf/events/: __init__.py
gbf/events/times/: __init__.py  cycle10.py  cycle15.py  cycle5.py  t_event.py
src/: bot.py
src/cogs/: sample.py
src/cogs/battle/: after_reaction.py  battle_type.py  belial.py  (+8 more)
src/enums/: last_process_type.py
src/gbf_discord_bot/: bot.py
src/models/: __init__.py  base.py  battle_recruitment.py  battle_recruitments.py  battle_type.py  battle_types.py  channel_types.py  elements.py  environment.py  environments.py  event_schedule_details.py  event_schedules.py  event_schedules_detail.py  guild_channels.py  guild_event_schedule_details.py  guild_last_process_times.py  last_process_time.py  last_process_times.py  messages.py  model_base.py  quest.py  quests.py  schedules.py
src/util/: convert_datetime.py  convert_time.py  environment_eval.py
tests/: conftest.py  test_setup.sql
(+147 files in other folders)
